[build-system]
# Defined by PEP 518
requires = [
  "setuptools>=45",
  "setuptools_scm[toml]>=7.0",
  "wheel",
  "numpy",
  "Cython>=3.0",
]
# Defined by PEP 517
build-backend = "setuptools.build_meta"

[project]
name = "cf-units"
authors = [
    {name = "cf-units Contributors", email = "scitools.pub@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Oceanography",
]
dependencies = [
    "cftime >=1.2",
    "jinja2",
    "numpy"
    # udunits2 cannot be installed with pip, and it is expected to be
    #  installed separately.
]
description = "Units of measure as required by the Climate and Forecast (CF) metadata conventions"
dynamic = [
    "version",
]
keywords = [
    "units",
    "cf",
    "cf-metadata",
    "netcdf",
    "science",
    "earth-science",
    "oceanography",
    "meteorology",
    "climate",
    "python",
]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
all = ["cf-units[docs,test]"]
docs = ["sphinx"]
test = ["codecov", "cython", "jinja2", "pip", "pytest", "pytest-cov"]

[project.urls]
Code = "https://github.com/SciTools/cf-units"
Discussions = "https://github.com/SciTools/cf-units/discussions"
Issues = "https://github.com/SciTools/cf-units/issues"
Documentation = "https://cf-units.readthedocs.io"

[tool.codespell]
#ignore-words-list = "Wirth"
skip = 'cf_units/_udunits2_parser/parser/*,cf_units/_udunits2_parser/_antlr4_runtime/*'

[tool.coverage.run]
branch = true
plugins = [
    "Cython.Coverage"
]
include = [
    "cf_units/*"
]
omit = [
    "setup.py",
    "cf_units/_version.py",
    "cf_units/etc/*",
    "cf_units/tests/*",
    "cf_units/_udunits2_parser/parser/*",
    "cf_units/_udunits2_parser/compile.py",
    ".eggs"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:"
]

[tool.pytest.ini_options]
addopts = ["-ra", "-v", "--strict-config", "--strict-markers", "--doctest-modules"]
log_cli_level = "INFO"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS NUMBER"
filterwarnings = [
    "error",
    "default:This method is no longer needed:DeprecationWarning",   # Added for known warnings
]
minversion = "6.0"
testpaths = "cf_units"
xfail_strict = true

[tool.setuptools.packages.find]
include = ["cf_units"]

[tool.setuptools_scm]
write_to = "cf_units/_version.py"
local_scheme = "dirty-tag"

[tool.ruff]
# Ignore generated code.
extend-exclude = [
    "cf_units/_udunits2_parser/parser",
    "cf_units/_udunits2_parser/_antlr4_runtime",
]
line-length = 88

[tool.ruff.lint]
select = [
    "ALL",
    "D212",  # Multi-line docstring summary should start at the first line
#    # pyflakes
#    "F",
#    # pycodestyle
#    "E",
#    "W",
    # flake8-bugbear
#    "B",
#    # flake8-comprehensions
##    "C4",
#    # isort
#    "I",
#    # pyupgrade
#    "UP",
]
ignore = [
    # NOTE: Non-permanent exclusions should be added to the ".ruff.toml" file.

    # flake8-commas (COM)
    # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    "A001",
    "ANN001",
    "ANN003", # Missing type annotation for `**kwargs`
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN206", # Missing return type annotation for classmethod `_new_from_existing_ut`
    "ARG002",  # Unused method argument
    "B904",  # Raise statements in exception handlers that lack a from clause
    "COM812",  # Trailing comma missing.
    "COM819",  # Trailing comma prohibited.
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D205",
    "D301",  # Use `r"""` if any backslashes in a docstring
    "D400",
    "D401",
    "D404",  # First word of the docstring should not be "This"
    "DTZ001",
    "DTZ006",
    "EM101",
    "EM102",
    "F403",  # Wildcard imports
    "F405",  # Use of name from wildcard import
    "FBT002",
    "FIX002",  # Line contains TODO, consider resolving the issue
    "FLY002",  # Consider f-string instead of string join
    "INP001",  # File `cf_units/tests/integration/parse/test_parse.py` is part of an implicit namespace package. Add an `__init__.py`.
    "N801",
    "N802",
    "N803",  # Argument name `nextResult` should be lowercase
    "N803",  # Argument name `offendingSymbol` should be lowercase
    "N806",  # Variable `MODE_P` in function should be lowercase
    "N806", #  Variable `TOKEN_P` in function should be lowercase
    "PGH004", # Use a colon when specifying `noqa` rule codes
    "PLC0414", # Import alias does not rename original package
    "PLR0912",  # Too many branches (14 > 12)
    "PLR0912", # Too many branches (18 > 12)
    "PLR0913",
    "PLR2004",
    "PT006",
    "PT011",
    "PT012",
    "PT019",
    "PTH123",
    "RET504",  # Unnecessary assignment to `contents` before `return` statement
    "RET504",  # Unnecessary assignment to `result` before `return` statement
    "RUF001",
    "RUF003",
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "S101",
    "S102",
    "S310",  # Audit URL open for permitted schemes. Allowing use of `file
    "S603",
    "S607",
    "S701",  # By default, jinja2 sets `autoescape` to `False`. Consider using `autoescape=True` or the `select_autoescape` function to mitigate XSS vulnerabilities.
    "SIM108",  # Use ternary operator `op_type = graph.Divide if node.content == "/" else graph.Multiply` instead of `if`-`else`-block
    "SIM108",  # Use ternary operator `result = handler(content) if callable(handler) else handler` instead of `if`-`else`-block
    "SIM108",  # Use ternary operator `result = value if inplace else copy.deepcopy(value)` instead of `if`-`else`-block
    "SLF001",
    "T201",  #`print` found
    "TD002",  #Missing author in TODO; try
    "TD003",  #Missing issue link on the line following this TODO
    "TD004",  # Missing colon in TODO
    "TRY003",

]
preview = false

[tool.ruff.lint.isort]
known-first-party = ["cf_units"]

[tool.ruff.lint.mccabe]
max-complexity = 22

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.repo-review]
# These are a list of the currently failing tests:
ignore = [
  "PP003",  # Does not list wheel as a build-dep
 # "PP309",  # Filter warnings specified
  "GH212",  # Require GHA update grouping
  "PC170",  # Uses PyGrep hooks (only needed if rST present)
  "PC180",  # Uses a markdown formatter
  "MY105",  #  MyPy enables redundant-expr  (TODO: see MyPy ignore below)
]

[tool.mypy]
disable_error_code = [
	# TODO: Fix these:
	"arg-type",
	"assignment",
	"attr-defined",
	"func-returns-value",
	"misc",
	"no-untyped-call",
	"no-untyped-def",
	"operator",
	"redundant-expr",
	"unreachable",
	"var-annotated",
]
enable_error_code = [
	"ignore-without-code",
#	"redundant-expr",		# TODO: Add back in when above ignores fixed
	"truthy-bool"
]
exclude = [
	"docs",
	"cf_units/_udunits2_parser",
]
ignore_missing_imports = true
strict = true
warn_unreachable = true

[tool.numpydoc_validation]
checks = [
    "all",  # Enable all numpydoc validation rules, apart from the following:

    # -> Docstring text (summary) should start in the line immediately
    #    after the opening quotes (not in the same line, or leaving a
    #    blank line in between)
    "GL01",  # Permit summary line on same line as docstring opening quotes.

    # -> Closing quotes should be placed in the line after the last text
    #    in the docstring (do not close the quotes in the same line as
    #    the text, or leave a blank line between the last text and the
    #    quotes)
    "GL02",  # Permit a blank line before docstring closing quotes.

    # -> Double line break found; please use only one blank line to
    #    separate sections or paragraphs, and do not leave blank lines
    #    at the end of docstrings
    "GL03",  # Ignoring.

    # -> See Also section not found
    "SA01",  # Not all docstrings require a "See Also" section.

    # -> No extended summary found
    "ES01",  # Not all docstrings require an "Extended Summary" section.

    # -> No examples section found
    "EX01",  # Not all docstrings require an "Examples" section.

    # -> No Yields section found
    "YD01",  # Not all docstrings require a "Yields" section.

    # Record temporarily ignored checks below; will be reviewed at a later date:
    "GL08", # The object does not have a docstring

    "GL09", # Deprecation warning should precede extended

    "PR01", # Parameters {xxxx} not documented

    "RT01", # No Returns section found

    "SS03", # Summary does not end with a period

    "SS06", # Summary should fit in a single line

    "SS05", #Summary must start with infinitive verb, not third person
            # (e.g. use "Generate" instead of "Generates")

    "RT03", # Return value has no description

    "RT05", # Return value description should finish with "."

]
exclude = [
    '\.__eq__$',
    '\.__ne__$',
    '\.__repr__$',
]
