[metadata]
author = SciTools Developers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
description = Units of measure as required by the Climate and Forecast (CF) metadata conventions
download_url = https://github.com/SciTools/cf-units
keywords =
    units
    cf
    netcdf
    science
    oceanography
    meteorology
    climate
license = BSD
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = cf-units
project_urls =
    Code = https://github.com/SciTools/cf-units
    Discussions = https://github.com/SciTools/cf-units/discussions
    Issues = https://github.com/SciTools/cf-units/issues
url = https://github.com/SciTools/cf-units
version = attr: cf_units.__version__

[options]
include_package_data = True
install_requires =
    antlr4-python3-runtime ==4.11.1  # To update this, see cf_units/_udunits2_parser/README.md
    cftime >=1.2
    jinja2
    numpy >=1.23
    # udunits2 cannot be installed with pip, and it is expected to be
    #  installed separately.
packages = find_namespace:
python_requires =
    >=3.9
zip_safe = False

[options.extras_require]
docs =
    sphinx
test =
    codecov
    cython
    jinja2
    pip
    pytest
    pytest-cov
all =
    pre-commit
    %(docs)s
    %(test)s

[aliases]
test = pytest
