[metadata]
author = SciTools Developers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
description = Units of measure as required by the Climate and Forecast (CF) metadata conventions
download_url = https://github.com/SciTools/cf-units
keywords =
    units
    cf
    netcdf
    science
    oceanography
    meteorology
    climate
license = BSD
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = cf-units
project_urls =
    Code = https://github.com/SciTools/cf-units
    Discussions = https://github.com/SciTools/cf-units/discussions
    Issues = https://github.com/SciTools/cf-units/issues
url = https://github.com/SciTools/cf-units
version = attr: cf_units.__version__

[options]
include_package_data = True
install_requires =
    antlr4-python3-runtime ==4.11.1
    cftime >=1.2
    jinja2
    numpy
    # udunits2 cannot be installed with pip, and it is expected to be
    #  installed separately.
packages = find_namespace:
python_requires =
    >=3.9
zip_safe = False

[options.extras_require]
docs =
    sphinx
test =
    codecov
    cython
    jinja2
    pip
    pytest
    pytest-cov
all =
    pre-commit
    %(docs)s
    %(test)s

[flake8]
# References:
#   https://flake8.readthedocs.io/en/latest/user/configuration.html
#   https://flake8.readthedocs.io/en/latest/user/error-codes.html
#   https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes

select = C,E,F,W,B,B950
ignore =
    # E203: whitespace before ':'
    E203,
    # E226: missing whitespace around arithmetic operator
    E226,
    # E231: missing whitespace after ',', ';', or ':'
    E231,
    # E402: module level imports on one line
    E402,
    # E501: line too long
    E501,
    # E731: do not assign a lambda expression, use a def
    E731,
    # W503: line break before binary operator
    W503,
    # W504: line break after binary operator
    W504
exclude =
    .eggs,
    .git,
    build,
    cf_units/_version.py,
    doc,
    etc,
    cf_units/_udunits2_parser/parser/*

[aliases]
test = pytest
